--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru-RU">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Обо мне</title>
 	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/about.css">
 </head>
 <body>
-<h1>Hi</h1>
+	<div class="wrapper">
+		<header class="header">
+			<div class="container-wide"></div>
+		</header>
+		<main class="content">
+			<div class="container">
+				<aside class="aside"></aside>
+				<div class="content-area"></div>
+			</div>
+		</main>
+		<div class="empty"></div>
+	</div>
+	<footer class="footer">© 2015. Это мой сайт, пожалуйста, не копируйте и не воруйте его!</footer>
+
+
+	<script src="bower/jquery/jquery.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
