--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="wrapper">
 		<header class="header">
-			<div class="container-wide"></div>
+			<div class="container-wide">1</div>
 		</header>
 		<main class="content">
 			<div class="container">
@@ -21,7 +21,15 @@
 		</main>
 		<div class="empty"></div>
 	</div>
-	<footer class="footer">© 2015. Это мой сайт, пожалуйста, не копируйте и не воруйте его!</footer>
+	<footer class="footer">
+		<div class="container">
+			<div class="login">
+				<div class="sprite-locked"></div>
+				<div class="log">ВХОД</div>
+			</div>
+			<div class="copyright">© 2015. Это мой сайт, пожалуйста, не копируйте и не воруйте его!</div>
+		</div>
+	</footer>
 
 
 	<script src="bower/jquery/jquery.min.js"></script>
