--- a/app/index.html
+++ b/app/index.html
@@ -11,18 +11,44 @@
 <body>
 	<div class="wrapper">
 		<header class="header">
-			<div class="container-wide">1</div>
+			<div class="container-wide">
+				<a class="link-logo" href="#"><img src="img/logo.png" width="95" alt="LoftSchool от мыслителя к создателю" class="logo"></a>
+				<div class="social">
+					<ul class="social-icon">
+						<li class="social-icon-fb"><a href="https://www.facebook.com/profile.php?id=100009587626821" target="_blank">Fb</a></li>
+						<li class="social-icon-vk"><a href="http://vk.com/elena_anischenkova" target="_blank">Vk</a></li>
+						<li class="social-icon-tw"><a href="https://twitter.com/" target="_blank">Twt</a></li>
+						<li class="social-icon-gh"><a href="https://github.com/Jolja06" target="_blank">GitHub</a></li>
+					</ul>
+				</div>
+			</div>
 		</header>
 		<main class="content">
 			<div class="container">
-				<aside class="aside"></aside>
-				<div class="content-area"></div>
+				<aside class="aside">
+					<nav class="nav">
+						<ul class="nav-list">
+							<li class="nav-item active">Обо мне</li>
+							<li class="nav-item">Мои работы</li>
+							<li class="nav-item">Обратная связь</li>
+						</ul>
+					</nav>
+					<div class="contacts">
+						<ul class="contacts-list">
+							<li class="contacts-item-name">Контакты</li>
+							<li class="contacts-item">elena_an_92@mail.ru</li>
+							<li class="contacts-item">+79168342318</li>
+							<li class="contacts-item">jolja06</li>
+						</ul>
+					</div>
+				</aside>
+				<div class="content-area">2</div>
 			</div>
 		</main>
 		<div class="empty"></div>
 	</div>
 	<footer class="footer">
-		<div class="container">
+		<div class="container-footer">
 			<div class="login">
 				<div class="sprite-locked"></div>
 				<div class="log">ВХОД</div>
