first page again

--- a/app/index.html
+++ b/app/index.html
@@ -28,21 +28,60 @@
 				<aside class="aside">
 					<nav class="nav">
 						<ul class="nav-list">
-							<li class="nav-item active">Обо мне</li>
-							<li class="nav-item">Мои работы</li>
-							<li class="nav-item">Обратная связь</li>
+							<li class="nav-item active"><a class="active" href="#">Обо мне</a></li>
+							<li class="nav-item"><a href="#">Мои работы</a></li>
+							<li class="nav-item"><a href="#">Обратная связь</a></li>
 						</ul>
 					</nav>
 					<div class="contacts">
 						<ul class="contacts-list">
 							<li class="contacts-item-name">Контакты</li>
-							<li class="contacts-item">elena_an_92@mail.ru</li>
-							<li class="contacts-item">+79168342318</li>
-							<li class="contacts-item">jolja06</li>
+							<li class="contacts-item"><img class="contacts-icon" src="img/email.png" width="17"><a href="mailto:elena_an_92@mail.ru" class="email">elena_an_92@mail.ru</a></li>
+							<li class="contacts-item"><img class="contacts-icon" src="img/telephone.png" width="17"><a href="tel:+79168342318">+79168342318</a></li>
+							<li class="contacts-item"><img class="contacts-icon" src="img/skype.png" width="20"><a href="skype:jolja06?chat">jolja06</a></li>
 						</ul>
 					</div>
 				</aside>
-				<div class="content-area">2</div>
+				<div class="content-area">
+					<section class="section">
+						<h1>Основная информация</h1>
+						<div class="about-me">
+							<div class="photo">
+								<div class="photo-box">
+									<img src="img/photo.jpg" alt="Анищенкова Елена">
+								</div>
+							</div>
+							<div class="about-me-description">
+								<ul class="about-me-description-list">
+									<li>Меня зовут: <span>Анищенкова Елена Витальевна</span></li>
+									<li>Мой возраст: <span>23 года</span></li>
+									<li>Мой город: <span>Москва, Россия</span></li>
+									<li>Моя специализация: <span>frontend разработка</span></li>
+									<li>Ключевые навыки: HTML CSS jQuery JavaScript GIT GULP  </li>
+								</ul>
+							</div>
+						</div>
+					</section>
+					<section class="section">
+						<h1>Опыт работы</h1>
+						<div class="description">
+							<ul class="description-list">
+								<li class="case">АО &laquo;Связной-Клуб&raquo; &ndash; html-верстальщик <span>февраль 2015 &ndash; по настоящее время</span></li>
+							</ul>
+						</div>
+					</section>
+					<section class="section">
+						<h1>Образование</h1>
+						<div class="description">
+							<ul class="description-list">
+								<li class="school">Полное среднее. Школа №9 г. Вязьма <span>1999-2010</span></li>
+								<li class="file">Среднее специальное. Колледж современных технологий г.Вязьма <span>2008-2010</span></li>
+								<li class="graduate">Высшее образование. МГУП им. Ивана Федорова <span>2010-2015</span></li>
+								<li class="file">Курсы Loftschool.com <span>2016 &ndash; по настоящее время</span></li>
+							</ul>
+						</div>
+					</section>
+				</div>
 			</div>
 		</main>
 		<div class="empty"></div>
