--- a/app/index.html
+++ b/app/index.html
@@ -15,10 +15,10 @@
 				<a class="link-logo" href="#"><img src="img/logo.png" width="95" alt="LoftSchool от мыслителя к создателю" class="logo"></a>
 				<div class="social">
 					<ul class="social-icon">
-						<li class="social-icon-fb"><a href="https://www.facebook.com/profile.php?id=100009587626821" target="_blank">Fb</a></li>
-						<li class="social-icon-vk"><a href="http://vk.com/elena_anischenkova" target="_blank">Vk</a></li>
-						<li class="social-icon-tw"><a href="https://twitter.com/" target="_blank">Twt</a></li>
-						<li class="social-icon-gh"><a href="https://github.com/Jolja06" target="_blank">GitHub</a></li>
+						<li class="social-icon-fb"><a href="https://www.facebook.com/profile.php?id=100009587626821" target="_blank"></a></li>
+						<li class="social-icon-vk"><a href="http://vk.com/elena_anischenkova" target="_blank"></a></li>
+						<li class="social-icon-tw"><a href="https://twitter.com/" target="_blank"></a></li>
+						<li class="social-icon-gh"><a href="https://github.com/Jolja06" target="_blank"></a></li>
 					</ul>
 				</div>
 			</div>
@@ -57,7 +57,15 @@
 									<li>Мой возраст: <span>23 года</span></li>
 									<li>Мой город: <span>Москва, Россия</span></li>
 									<li>Моя специализация: <span>frontend разработка</span></li>
-									<li>Ключевые навыки: HTML CSS jQuery JavaScript GIT GULP  </li>
+									<li class="skill">Ключевые навыки:</li>
+									<ul class="skill-list"> 
+										<li><span class="skill-item">HTML</span> </li>
+										<li><span class="skill-item">CSS</span> </li>
+										<li><span class="skill-item">JQUERY</span></li> 
+										<li><span class="skill-item">JAVASCRIPT</span></li>
+										<li><span class="skill-item">GIT</span></li> 
+										<li><span class="skill-item">GULP</span></li>
+									</ul>
 								</ul>
 							</div>
 						</div>
@@ -66,6 +74,7 @@
 						<h1>Опыт работы</h1>
 						<div class="description">
 							<ul class="description-list">
+								<li class="case">ЗАО &laquo;Связной-Клуб&raquo; &ndash; делопроизводитель <span>август 2014 &ndash; февраль 2015</span></li>
 								<li class="case">АО &laquo;Связной-Клуб&raquo; &ndash; html-верстальщик <span>февраль 2015 &ndash; по настоящее время</span></li>
 							</ul>
 						</div>
@@ -77,7 +86,7 @@
 								<li class="school">Полное среднее. Школа №9 г. Вязьма <span>1999-2010</span></li>
 								<li class="file">Среднее специальное. Колледж современных технологий г.Вязьма <span>2008-2010</span></li>
 								<li class="graduate">Высшее образование. МГУП им. Ивана Федорова <span>2010-2015</span></li>
-								<li class="file">Курсы Loftschool.com <span>2016 &ndash; по настоящее время</span></li>
+								<li class="file">Курсы Loftschool.com <span>январь 2016 &ndash; по настоящее время</span></li>
 							</ul>
 						</div>
 					</section>
