Second pade done

--- a/app/callback.html
+++ b/app/callback.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru-RU">
 <head>
+	<head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Обо мне</title>
+	<title>Обратная связь</title>
 	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/about.css">
 	<!--[if IE]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
+</head>
 </head>
 <body>
 	<div class="wrapper">
@@ -31,9 +33,9 @@
 				<aside class="aside">
 					<nav class="nav">
 						<ul class="nav-list">
-							<li class="nav-item active"><a class="active" href="#">Обо мне</a></li>
+							<li class="nav-item"><a href="index.html">Обо мне</a></li>
 							<li class="nav-item"><a href="projects.html">Мои работы</a></li>
-							<li class="nav-item"><a href="callback.html">Обратная связь</a></li>
+							<li class="nav-item active"><a class="active" href="callback.html">Обратная связь</a></li>
 						</ul>
 					</nav>
 					<div class="contacts">
@@ -47,52 +49,12 @@
 				</aside>
 				<div class="content-area">
 					<section class="section">
-						<h1>Основная информация</h1>
+						<h1>У вас интересный проект? Напишите мне</h1>
 						<div class="about-me">
-							<div class="photo">
-								<div class="photo-box">
-									<img src="img/photo.jpg" alt="Анищенкова Елена">
-								</div>
-							</div>
-							<div class="about-me-description">
-								<ul class="about-me-description-list">
-									<li>Меня зовут: <span>Анищенкова Елена Витальевна</span></li>
-									<li>Мой возраст: <span>23 года</span></li>
-									<li>Мой город: <span>Москва, Россия</span></li>
-									<li>Моя специализация: <span>frontend разработка</span></li>
-									<li class="skill">Ключевые навыки:</li>
-									<ul class="skill-list"> 
-										<li><span class="skill-item">HTML</span> </li>
-										<li><span class="skill-item">CSS</span> </li>
-										<li><span class="skill-item">JQUERY</span></li> 
-										<li><span class="skill-item">JAVASCRIPT</span></li>
-										<li><span class="skill-item">GIT</span></li> 
-										<li><span class="skill-item">GULP</span></li>
-									</ul>
-								</ul>
-							</div>
+							ю-ху
 						</div>
 					</section>
-					<section class="section">
-						<h1>Опыт работы</h1>
-						<div class="description">
-							<ul class="description-list">
-								<li class="case">ЗАО &laquo;Связной-Клуб&raquo; &ndash; делопроизводитель <span>август 2014 &ndash; февраль 2015</span></li>
-								<li class="case">АО &laquo;Связной-Клуб&raquo; &ndash; html-верстальщик <span>февраль 2015 &ndash; по настоящее время</span></li>
-							</ul>
-						</div>
-					</section>
-					<section class="section">
-						<h1>Образование</h1>
-						<div class="description">
-							<ul class="description-list">
-								<li class="school">Полное среднее. Школа №9 г. Вязьма <span>1999-2010</span></li>
-								<li class="file">Среднее специальное. Колледж современных технологий г.Вязьма <span>2008-2010</span></li>
-								<li class="graduate">Высшее образование. МГУП им. Ивана Федорова <span>2010-2015</span></li>
-								<li class="file">Курсы Loftschool.com <span>январь 2016 &ndash; по настоящее время</span></li>
-							</ul>
-						</div>
-					</section>
+					
 				</div>
 			</div>
 		</main>
