--- a/app/callback.html
+++ b/app/callback.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru-RU">
 <head>
-	<head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Обратная связь</title>
 	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/callback.css">
-	<!--[if IE]>
-	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<script src="js/modernizr.js"></script>
+	<!--[if IE 8]>
+		<link rel="stylesheet" href="css/mainie.css">
 	<![endif]-->
-</head>
 </head>
 <body>
 	<div class="wrapper">
@@ -49,7 +48,7 @@
 				</aside>
 				<div class="content-area">
 					<section class="section">
-						<h1>У вас интересный проект? Напишите мне</h1>
+						<h1 class="section-title">У вас интересный проект? Напишите мне</h1>
 						<div class="description">
 							<div class="callback">
 								<form action="#" name="callback" class="callback-form">
