--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,9 @@
 	<title>Обо мне</title>
 	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/about.css">
-	<!--[if IE]>
-	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<script src="js/modernizr.js"></script>
+	<!--[if IE 8]>
+		<link rel="stylesheet" href="css/mainie.css">
 	<![endif]-->
 </head>
 <body>
@@ -47,7 +48,7 @@
 				</aside>
 				<div class="content-area">
 					<section class="section">
-						<h1>Основная информация</h1>
+						<h1 class="section-title">Основная информация</h1>
 						<div class="about-me">
 							<div class="photo">
 								<div class="photo-box">
@@ -74,7 +75,7 @@
 						</div>
 					</section>
 					<section class="section">
-						<h1>Опыт работы</h1>
+						<h1 class="section-title">Опыт работы</h1>
 						<div class="description">
 							<ul class="description-list">
 								<li class="case">ЗАО &laquo;Связной-Клуб&raquo; &ndash; делопроизводитель <span>август 2014 &ndash; февраль 2015</span></li>
@@ -83,7 +84,7 @@
 						</div>
 					</section>
 					<section class="section">
-						<h1>Образование</h1>
+						<h1 class="section-title">Образование</h1>
 						<div class="description">
 							<ul class="description-list">
 								<li class="school">Полное среднее. Школа №9 г. Вязьма <span>1999-2010</span></li>
