--- a/app/projects.html
+++ b/app/projects.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru-RU">
-<head>
 	<head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +7,10 @@
 	<title>Мои работы</title>
 	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/projects.css">
-	<!--[if IE]>
-	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<script src="js/modernizr.js"></script>
+	<!--[if IE 8]>
+		<link rel="stylesheet" href="css/mainie.css">
 	<![endif]-->
-</head>
 </head>
 <body>
 	<div class="wrapper">
@@ -49,7 +48,7 @@
 				</aside>
 				<div class="content-area">
 					<section class="section">
-						<h1>Мои работы</h1>
+						<h1 class="section-title">Мои работы</h1>
 						<div class="description">
 							<div class="project">
 								 	<div class="project-row">
@@ -70,7 +69,7 @@
 											</div>
 										 	
 										</div>
-										<div class="project-wrap">
+										<div class="project-wrap project-wrap-ie">
 									 		<div class="project-item">
 												<div class="project-pic">
 													<img src="img/pic2.jpg" alt="домгазобетон.рф">
@@ -124,7 +123,7 @@
 											</div>
 									 		
 									 	</div>
-									 	<div class="project-wrap">
+									 	<div class="project-wrap project-wrap-ie">
 									 		<div class="project-item">
 												<div class="project-pic">
 													<img src="img/pic5.jpg" alt="yasnow.biz">
