Add links to the logo. Fixing the bug in progects.html

--- a/app/projects.html
+++ b/app/projects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru-RU">
-	<head>
+<head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +16,7 @@
 	<div class="wrapper">
 		<header class="header">
 			<div class="container-wide">
-				<a class="link-logo" href="#"><img src="img/logo.png" width="95" alt="LoftSchool от мыслителя к создателю" class="logo"></a>
+				<a class="link-logo" href="index.html"><img src="img/logo.png" width="95" alt="LoftSchool от мыслителя к создателю" class="logo"></a>
 				<div class="social">
 					<ul class="social-icon">
 						<li class="social-icon-fb"><a href="https://www.facebook.com/profile.php?id=100009587626821" target="_blank"></a></li>
