--- a/app/callback.html
+++ b/app/callback.html
@@ -16,7 +16,7 @@
 	<div class="wrapper">
 		<header class="header">
 			<div class="container-wide">
-				<a class="link-logo" href="#"><img src="img/logo.png" width="95" alt="LoftSchool от мыслителя к создателю" class="logo"></a>
+				<a class="link-logo" href="index.html"><img src="img/logo.png" width="95" alt="LoftSchool от мыслителя к создателю" class="logo"></a>
 				<div class="social">
 					<ul class="social-icon">
 						<li class="social-icon-fb"><a href="https://www.facebook.com/profile.php?id=100009587626821" target="_blank"></a></li>
