--- a/app/index.html
+++ b/app/index.html
@@ -58,9 +58,9 @@
 					<div class="contacts">
 						<ul class="contacts-list">
 							<li class="contacts-item-name">Контакты</li>
-							<li class="contacts-item"><img class="contacts-icon" src="img/email.png" width="17"><a href="mailto:elena_an_92@mail.ru" class="email">elena_an_92@mail.ru</a></li>
-							<li class="contacts-item"><img class="contacts-icon" src="img/telephone.png" width="17"><a href="tel:+79168342318">+79168342318</a></li>
-							<li class="contacts-item"><img class="contacts-icon" src="img/skype.png" width="20"><a href="skype:jolja06?chat">jolja06</a></li>
+							<li class="contacts-item"><img class="contacts-icon" src="img/email.png" alt="email" width="17"><a href="mailto:elena_an_92@mail.ru" class="email">elena_an_92@mail.ru</a></li>
+							<li class="contacts-item"><img class="contacts-icon" src="img/telephone.png" alt="telephone" width="17"><a href="tel:+79168342318">+79168342318</a></li>
+							<li class="contacts-item"><img class="contacts-icon" src="img/skype.png" alt="skype" width="20"><a href="skype:jolja06?chat">jolja06</a></li>
 						</ul>
 					</div>
 				</aside>
@@ -79,15 +79,16 @@
 									<li>Мой возраст: <span>23 года</span></li>
 									<li>Мой город: <span>Москва, Россия</span></li>
 									<li>Моя специализация: <span>frontend разработка</span></li>
-									<li class="skill">Ключевые навыки:</li>
-									<ul class="skill-list"> 
-										<li><span class="skill-item">HTML</span> </li>
-										<li><span class="skill-item">CSS</span> </li>
-										<li><span class="skill-item">JQUERY</span></li> 
-										<li><span class="skill-item">JAVASCRIPT</span></li>
-										<li><span class="skill-item">GIT</span></li> 
-										<li><span class="skill-item">GULP</span></li>
-									</ul>
+									<li class="skill">Ключевые навыки:
+										<ul class="skill-list"> 
+											<li><span class="skill-item">HTML</span> </li>
+											<li><span class="skill-item">CSS</span> </li>
+											<li><span class="skill-item">JQUERY</span></li> 
+											<li><span class="skill-item">JAVASCRIPT</span></li>
+											<li><span class="skill-item">GIT</span></li> 
+											<li><span class="skill-item">GULP</span></li>
+										</ul>
+									</li>								
 								</ul>
 							</div>
 						</div>
