fixbug side bar contacts

--- a/app/projects.html
+++ b/app/projects.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=1200px, initial-scale=1">
 	<title>Мои работы</title>
 	<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
@@ -34,13 +34,13 @@
 	<div class="wrapper">
 		<header class="header">
 			<div class="container-wide">
-				<a class="link-logo" href="index.html"><img src="img/logo.png" width="95" alt="LoftSchool от мыслителя к создателю" class="logo"></a>
+				<a class="link-logo" href="index.html"><img src="img/logo.png" width="95" alt="LoftSchool от мыслителя к создателю" class="logo"><h1>LoftSchool от мыслителя к создателю</h1></a>
 				<div class="social">
 					<ul class="social-icon">
-						<li class="social-icon-fb"><a href="https://www.facebook.com/profile.php?id=100009587626821" target="_blank"></a></li>
-						<li class="social-icon-vk"><a href="http://vk.com/elena_anischenkova" target="_blank"></a></li>
-						<li class="social-icon-tw"><a href="https://twitter.com/" target="_blank"></a></li>
-						<li class="social-icon-gh"><a href="https://github.com/Jolja06" target="_blank"></a></li>
+						<li class="social-icon-fb"><a href="https://www.facebook.com/profile.php?id=100009587626821" target="_blank">facebook</a></li>
+						<li class="social-icon-vk"><a href="http://vk.com/elena_anischenkova" target="_blank">vk</a></li>
+						<li class="social-icon-tw"><a href="https://twitter.com/" target="_blank">twitter</a></li>
+						<li class="social-icon-gh"><a href="https://github.com/Jolja06" target="_blank">GitHub</a></li>
 					</ul>
 				</div>
 			</div>
@@ -56,17 +56,17 @@
 						</ul>
 					</nav>
 					<div class="contacts">
+						<div class="contacts-name">Контакты</div>
 						<ul class="contacts-list">
-							<li class="contacts-item-name">Контакты</li>
-							<li class="contacts-item"><img class="contacts-icon" src="img/email.png" width="17"><a href="mailto:elena_an_92@mail.ru" class="email">elena_an_92@mail.ru</a></li>
-							<li class="contacts-item"><img class="contacts-icon" src="img/telephone.png" width="17"><a href="tel:+79168342318">+79168342318</a></li>
-							<li class="contacts-item"><img class="contacts-icon" src="img/skype.png" width="20"><a href="skype:jolja06?chat">jolja06</a></li>
+							<li class="contacts-item"><i class="contacts-icon contacts-icon-email"></i><a href="mailto:elena_an_92@mail.ru" class="email">elena_an_92@mail.ru</a></li>
+							<li class="contacts-item"><i class="contacts-icon contacts-icon-phone"></i><a href="tel:+79168342318">+79168342318</a></li>
+							<li class="contacts-item"><i class="contacts-icon contacts-icon-skype"></i><a href="skype:jolja06?chat">jolja06</a></li>
 						</ul>
 					</div>
 				</aside>
 				<div class="content-area">
 					<section class="section">
-						<h1 class="section-title">Мои работы</h1>
+						<h2 class="section-title">Мои работы</h2>
 						<div class="description">
 							<div class="project">
 								 	<div class="project-row">
