fixbug index.html .content-area

--- a/app/callback.html
+++ b/app/callback.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=1200px, initial-scale=1">
+	<meta name="viewport" content="width=1200, initial-scale=1">
 	<title>Обратная связь</title>
 	<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
@@ -45,7 +45,7 @@
 				</div>
 			</div>
 		</header>
-		<main class="content">
+		<div class="content">
 			<div class="container">
 				<aside class="aside">
 					<nav class="nav">
@@ -64,7 +64,7 @@
 						</ul>
 					</div>
 				</aside>
-				<div class="content-area">
+				<main class="content-area">
 					<section class="section">
 						<h2 class="section-title">У вас интересный проект? Напишите мне</h2>
 						<div class="description">
@@ -98,9 +98,9 @@
 						</div>
 					</section>
 					
-				</div>
+				</main>
 			</div>
-		</main>
+		</div>
 		<div class="empty"></div>
 	</div>
 	<footer class="footer">
