change sprit.png. Remove unused files. Correction projects.html

--- a/app/callback.html
+++ b/app/callback.html
@@ -58,9 +58,9 @@
 					<div class="contacts">
 						<div class="contacts-name">Контакты</div>
 						<ul class="contacts-list">
-							<li class="contacts-item"><i class="contacts-icon contacts-icon-email"></i><a href="mailto:elena_an_92@mail.ru" class="email">elena_an_92@mail.ru</a></li>
-							<li class="contacts-item"><i class="contacts-icon contacts-icon-phone"></i><a href="tel:+79168342318">+79168342318</a></li>
-							<li class="contacts-item"><i class="contacts-icon contacts-icon-skype"></i><a href="skype:jolja06?chat">jolja06</a></li>
+							<li class="contacts-item"><i class="contacts-icon contacts-icon-email"></i><a href="mailto:elena_an_92@mail.ru" class="icon-link email">elena_an_92@mail.ru</a></li>
+							<li class="contacts-item"><i class="contacts-icon contacts-icon-phone"></i><a href="tel:+79168342318" class="icon-link">+79168342318</a></li>
+							<li class="contacts-item"><i class="contacts-icon contacts-icon-skype"></i><a href="skype:jolja06?chat" class="icon-link">jolja06</a></li>
 						</ul>
 					</div>
 				</aside>
