--- a/app/projects.html
+++ b/app/projects.html
@@ -58,9 +58,9 @@
 					<div class="contacts">
 						<div class="contacts-name">Контакты</div>
 						<ul class="contacts-list">
-							<li class="contacts-item"><i class="contacts-icon contacts-icon-email"></i><a href="mailto:elena_an_92@mail.ru" class="email">elena_an_92@mail.ru</a></li>
-							<li class="contacts-item"><i class="contacts-icon contacts-icon-phone"></i><a href="tel:+79168342318">+79168342318</a></li>
-							<li class="contacts-item"><i class="contacts-icon contacts-icon-skype"></i><a href="skype:jolja06?chat">jolja06</a></li>
+							<li class="contacts-item"><i class="contacts-icon contacts-icon-email"></i><a href="mailto:elena_an_92@mail.ru" class="icon-link email">elena_an_92@mail.ru</a></li>
+							<li class="contacts-item"><i class="contacts-icon contacts-icon-phone"></i><a href="tel:+79168342318" class="icon-link">+79168342318</a></li>
+							<li class="contacts-item"><i class="contacts-icon contacts-icon-skype"></i><a href="skype:jolja06?chat" class="icon-link">jolja06</a></li>
 						</ul>
 					</div>
 				</aside>
@@ -73,9 +73,9 @@
 								 		<div class="project-wrap">
 										 	<div class="project-item">
 												<div class="project-pic">
-													<a href="#" target="_blank" class="wrap-image-link"><img src="img/pic1.jpg"  alt="a-industry.ru" class="projects-img"></a>
+													<img src="img/pic1.jpg"  alt="a-industry.ru" class="projects-img">
 													<div class="more-project">
-														<a href="#" class="more-link">Подробнее</a>
+														<a href="https://www.google.ru" target="_blank" class="more-link">Подробнее</a>
 													</div>
 												</div>
 											</div>
@@ -87,12 +87,12 @@
 											</div>
 										 	
 										</div>
-										<div class="project-wrap project-wrap-ie">
+										<div class="project-wrap">
 									 		<div class="project-item">
 												<div class="project-pic">
-													<img src="img/pic2.jpg" alt="домгазобетон.рф">
+													<img src="img/pic2.jpg" alt="домгазобетон.рф" class="projects-img">
 													<div class="more-project">
-														<a href="#" class="more-link">Подробнее</a>
+														<a href="https://www.google.ru" target="_blank" class="more-link">Подробнее</a>
 													</div>
 												</div>
 
@@ -108,9 +108,9 @@
 									 	<div class="project-wrap">
 									 		<div class="project-item">
 												<div class="project-pic">
-													<img src="img/pic3.jpg" alt="crmconsulting.biz">
+													<img src="img/pic3.jpg" alt="crmconsulting.biz" class="projects-img">
 													<div class="more-project">
-														<a href="#" class="more-link">Подробнее</a>
+														<a href="https://www.google.ru" target="_blank" class="more-link">Подробнее</a>
 													</div>
 												</div>
 											</div>
@@ -127,9 +127,9 @@
 								 		<div class="project-wrap">
 									 		<div class="project-item">
 												<div class="project-pic">
-													<img src="img/pic4.jpg" alt="landingsloft.ru">
+													<img src="img/pic4.jpg" alt="landingsloft.ru" class="projects-img">
 													<div class="more-project">
-														<a href="#" class="more-link">Подробнее</a>
+														<a href="https://www.google.ru" target="_blank" class="more-link">Подробнее</a>
 													</div>
 												</div>
 											</div>
@@ -141,12 +141,12 @@
 											</div>
 									 		
 									 	</div>
-									 	<div class="project-wrap project-wrap-ie">
+									 	<div class="project-wrap">
 									 		<div class="project-item">
 												<div class="project-pic">
-													<img src="img/pic5.jpg" alt="yasnow.biz">
+													<img src="img/pic5.jpg" alt="yasnow.biz" class="projects-img">
 													<div class="more-project">
-														<a href="#" class="more-link">Подробнее</a>
+														<a href="https://www.google.ru" target="_blank" class="more-link">Подробнее</a>
 													</div>
 												</div>
 											</div>
@@ -161,7 +161,7 @@
 									 	<div class="project-wrap">
 									 		<div class="project-item">
 											<div class="project-add">
-												<a href="#"><div class="wrap-img"><img src="img/polaroid.png" alt="Добавить новый проект"></div><span>Добавить проект</span></a>
+												<a href="#"><div class="wrap-img"><i class="project-add-icon"></i></div><span>Добавить проект</span></a>
 
 											</div>		
 											</div>
