corection after validator

--- a/app/callback.html
+++ b/app/callback.html
@@ -80,7 +80,7 @@
 									</div>
 										<div class="callback-input">
 											<label for="message">Сообщение</label>
-											<textarea class="callback-item callback-item-message" type="text" name="message" id="message" placeholder="Кратко в чем суть" required></textarea>
+											<textarea class="callback-item callback-item-message" name="message" id="message" placeholder="Кратко в чем суть" required></textarea>
 										</div>
 									<div class="capcha">
 										<label for="capcha">Введите код, указанный на картинке</label>
