changed the sign link in the footer. Add page sign.html

--- a/app/index.html
+++ b/app/index.html
@@ -124,8 +124,10 @@
 	<footer class="footer">
 		<div class="container-footer">
 			<div class="login">
-				<div class="sprite-locked"></div>
-				<div class="log">ВХОД</div>
+				<div class="locked-wrap">
+					<i class="locked"></i>
+					<a href="sign.html" class="log">ВХОД</a>
+				</div>
 			</div>
 			<div class="copyright">© 2015. Это мой сайт, пожалуйста, не копируйте и не воруйте его!</div>
 		</div>
