--- a/app/index.html
+++ b/app/index.html
@@ -23,8 +23,18 @@
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="msapplication-TileImage" content="/mstile-144x144.png">
 	<meta name="theme-color" content="#ffffff">
-	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
+	
+	<!-- build:css css/vendor.min.css -->
+	<!-- bower:css -->
+	<link rel="stylesheet" href="bower/normalize-css/normalize.css" />
+	<link rel="stylesheet" href="bower/qtip2/jquery.qtip.css" />
+	<!-- endbower -->
+	<!-- endbuild -->
+	
+	<!-- build:css css/about.min.css -->
 	<link rel="stylesheet" href="css/about.css">
+	<!-- endbuild -->
+
 	<script src="js/modernizr.js"></script>
 	<!--[if IE 8]>
 		<link rel="stylesheet" href="css/mainie.css">
@@ -132,9 +142,16 @@
 			<div class="copyright">© 2015. Это мой сайт, пожалуйста, не копируйте и не воруйте его!</div>
 		</div>
 	</footer>
-
-
-	<script src="bower/jquery/jquery.min.js"></script>
+	<!-- build:css js/vendor.js -->
+	<!-- bower:js -->
+	<script src="bower/jquery/jquery.js"></script>
+	<script src="bower/jquery-placeholder/jquery.placeholder.js"></script>
+	<script src="bower/qtip2/jquery.qtip.js"></script>
+	<script src="bower/bPopup/jquery.bpopup.js"></script>
+	<!-- endbower -->
+	<!-- endbuild -->
+	<!-- build:css js/main.js -->
 	<script src="js/main.js"></script>
+	<!-- endbuild -->
 </body>
 </html>
