html-coding popup

--- a/app/projects.html
+++ b/app/projects.html
@@ -181,6 +181,23 @@
 				</main>
 			</div>
 		</div>
+		<div class="add-project">
+			<span class="add-project-header">Добавление проекта</span>
+			<div class="add-project-wrap">
+				<i class="close-btn"></i>
+				<form class="add-project-form">
+					<label for="name-project" class="project-label">Название проекта</label>
+					<input type="text" id="name-project" class="input-item" placeholder="Введите название">
+					<label for="image-project" class="project-label">Картинка проекта</label>
+					<input type="" id="image-project" class="input-item" placeholder="Загрузите изображение"><div class="add-file-img"><i class="add-file-image-cloud"></i><input type="file" id="add-file" class="add-file"></div>
+					<label for="url-project" class="project-label">URL проекта</label>
+					<input type="text" id="url-project" class="input-item" placeholder="Добавьте ссылку">
+					<label for="description-project" class="project-label">Описание проекта</label>
+					<textarea name="" id="description-project" class="input-item textarea-item" placeholder="Пара слов в Вашем проекте"></textarea>
+					<div class="btn-wrap"><button type="submit" class="input-button input-button-submit">Добавить</button></div>
+				</form>
+			</div>
+		</div>
 		<div class="empty"></div>
 	</div>
 	<footer class="footer">
