edit gulpfile and adding a mainie in dist

--- a/app/callback.html
+++ b/app/callback.html
@@ -33,9 +33,11 @@
 	<link rel="stylesheet" href="css/callback.css">
 	<!-- endbuild -->
 	<script src="js/modernizr.js"></script>
+	<!-- build:css css/mainie.min.css -->
 	<!--[if IE 8]>
 		<link rel="stylesheet" href="css/mainie.css">
 	<![endif]-->
+	<!-- endbuild -->
 </head>
 <body>
 	<div class="wrapper">
