--- a/app/index.html
+++ b/app/index.html
@@ -36,9 +36,11 @@
 	<!-- endbuild -->
 
 	<script src="js/modernizr.js"></script>
+	<!-- build:css css/mainie.min.css -->
 	<!--[if IE 8]>
 		<link rel="stylesheet" href="css/mainie.css">
 	<![endif]-->
+	<!-- endbuild -->
 </head>
 <body>
 	<div class="wrapper">
