--- a/app/projects.html
+++ b/app/projects.html
@@ -33,9 +33,11 @@
 	<link rel="stylesheet" href="css/projects.css">
 	<!-- endbuild -->
 	<script src="js/modernizr.js"></script>
+	<!-- build:css css/mainie.min.css -->
 	<!--[if IE 8]>
 		<link rel="stylesheet" href="css/mainie.css">
 	<![endif]-->
+	<!-- endbuild -->
 </head>
 <body>
 	<div class="wrapper">
@@ -189,7 +191,7 @@
 					<label for="name-project" class="project-label">Название проекта</label>
 					<input type="text" id="name-project" class="input-item" placeholder="Введите название">
 					<label for="image-project" class="project-label">Картинка проекта</label>
-					<input type="" id="image-project" class="input-item" placeholder="Загрузите изображение"><div class="add-file-img"><i class="add-file-image-cloud"></i><input type="file" id="add-file" class="add-file"></div>
+					<input type="" id="image-project" class="input-item" placeholder="Загрузите изображение"><div class="add-file-img"><i class="add-file-image-cloud"><input type="file" id="add-file" class="add-file"></i></div>
 					<label for="url-project" class="project-label">URL проекта</label>
 					<input type="text" id="url-project" class="input-item" placeholder="Добавьте ссылку">
 					<label for="description-project" class="project-label">Описание проекта</label>
