add script for popup and placeholder

--- a/app/callback.html
+++ b/app/callback.html
@@ -81,21 +81,21 @@
 								<form action="#" name="callback" class="callback-form">
 									<div class="callback-input callback-input-margin">
 										<label for="name">Имя</label>
-										<input class="callback-item" type="text" name="name" id="name" placeholder="Как к Вам обращаться" required>
+										<input class="callback-item" type="text" name="name" id="name" placeholder="Как к Вам обращаться" >
 									</div>
 									<div class="callback-input">
 										<label for="email">Email</label>
-										<input class="callback-item" type="email" name="email" id="email" placeholder="Куда мне писать" required>
+										<input class="callback-item" type="email" name="email" id="email" placeholder="Куда мне писать" >
 									</div>
 										<div class="callback-input">
 											<label for="message">Сообщение</label>
-											<textarea class="callback-item callback-item-message" name="message" id="message" placeholder="Кратко в чем суть" required></textarea>
+											<textarea class="callback-item callback-item-message" name="message" id="message" placeholder="Кратко в чем суть" ></textarea>
 										</div>
 									<div class="capcha">
 										<label for="capcha">Введите код, указанный на картинке</label>
 										<div class="capcha-generate"><img src="img/capcha.png" alt="capcha"></div>
 										<div class="capcha-input">
-											<input class="callback-item callback-item-capcha" type="text" name="capcha" id="capcha" placeholder="Введите код" required>
+											<input class="callback-item callback-item-capcha" type="text" name="capcha" id="capcha" placeholder="Введите код" >
 										</div>
 									</div>
 									<div class="button">
@@ -133,7 +133,8 @@
 	<!-- endbower -->
 	<!-- endbuild -->
 	<!-- build:css js/main.js -->
-	<script src="js/main.js"></script>
+	<script src="js/popup.js"></script>
+	<script src="js/placeholder.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
