--- a/app/index.html
+++ b/app/index.html
@@ -153,7 +153,7 @@
 	<!-- endbower -->
 	<!-- endbuild -->
 	<!-- build:css js/main.js -->
-	<script src="js/main.js"></script>
+	<script src="js/popup.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
