--- a/app/sign.html
+++ b/app/sign.html
@@ -79,7 +79,8 @@
 	<!-- endbower -->
 	<!-- endbuild -->
 	<!-- build:css js/main.js -->
-	<script src="js/main.js"></script>
+	<script src="js/popup.js"></script>
+	<script src="js/placeholder.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
