--- a/app/projects.html
+++ b/app/projects.html
@@ -190,8 +190,8 @@
 				<form class="add-project-form">
 					<label for="name-project" class="project-label">Название проекта</label>
 					<input type="text" id="name-project" class="input-item" placeholder="Введите название">
-					<label for="image-project" class="project-label">Картинка проекта</label>
-					<input type="" id="image-project" class="input-item" placeholder="Загрузите изображение"><div class="add-file-img"><i class="add-file-image-cloud"><input type="file" id="add-file" class="add-file"></i></div>
+					<label for="add-file" class="project-label">Картинка проекта</label>
+					<div id="image-project" class="input-item" >Загрузите изображение</div><div class="add-file-img"><i class="add-file-image-cloud"><input type="file" id="add-file" class="add-file"></i></div>
 					<label for="url-project" class="project-label">URL проекта</label>
 					<input type="text" id="url-project" class="input-item" placeholder="Добавьте ссылку">
 					<label for="description-project" class="project-label">Описание проекта</label>
@@ -225,6 +225,7 @@
 	<!-- build:css js/main.js -->
 	<script src="js/popup.js"></script>
 	<script src="js/placeholder.js"></script>
+	<script src="js/input-file.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
