--- a/app/projects.html
+++ b/app/projects.html
@@ -187,7 +187,7 @@
 			<span class="add-project-header">Добавление проекта</span>
 			<div class="add-project-wrap">
 				<i class="close-btn b-close"></i>
-				<form class="add-project-form">
+				<form class="add-project-form" id="add-project-form">
 					<label for="name-project" class="project-label">Название проекта</label>
 					<input type="text" id="name-project" class="input-item" placeholder="Введите название">
 					<label for="add-file" class="project-label">Картинка проекта</label>
