--- a/app/callback.html
+++ b/app/callback.html
@@ -78,24 +78,24 @@
 						<h2 class="section-title">У вас интересный проект? Напишите мне</h2>
 						<div class="description">
 							<div class="callback">
-								<form action="#" name="callback" class="callback-form">
+								<form action="#" name="callback" class="callback-form" id="callback">
 									<div class="callback-input callback-input-margin">
 										<label for="name">Имя</label>
-										<input class="callback-item" type="text" name="name" id="name" placeholder="Как к Вам обращаться" >
+										<input class="callback-item" type="text" name="name" id="name" placeholder="Как к Вам обращаться" qtip-content="Вы не ввели имя">
 									</div>
 									<div class="callback-input">
 										<label for="email">Email</label>
-										<input class="callback-item" type="email" name="email" id="email" placeholder="Куда мне писать" >
+										<input class="callback-item" type="email" name="email" id="email" placeholder="Куда мне писать" qtip-content="Вы не ввели email" qtip-position="right">
 									</div>
 										<div class="callback-input">
 											<label for="message">Сообщение</label>
-											<textarea class="callback-item callback-item-message" name="message" id="message" placeholder="Кратко в чем суть" ></textarea>
+											<textarea class="callback-item callback-item-message" name="message" id="message" placeholder="Кратко в чем суть" qtip-content="Вы не ввели сообщение"></textarea>
 										</div>
 									<div class="capcha">
 										<label for="capcha">Введите код, указанный на картинке</label>
 										<div class="capcha-generate"><img src="img/capcha.png" alt="capcha"></div>
 										<div class="capcha-input">
-											<input class="callback-item callback-item-capcha" type="text" name="capcha" id="capcha" placeholder="Введите код" >
+											<input class="callback-item callback-item-capcha" type="text" name="capcha" id="capcha" placeholder="Введите код" qtip-content="Вы не ввели код" qtip-position="right">
 										</div>
 									</div>
 									<div class="button">
@@ -135,6 +135,9 @@
 	<!-- build:css js/main.js -->
 	<script src="js/popup.js"></script>
 	<script src="js/placeholder.js"></script>
+	<script src="js/input-file.js"></script>
+	<script src="js/validation.js"></script>
+	<script src="js/contactMe.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
