--- a/app/projects.html
+++ b/app/projects.html
@@ -187,15 +187,17 @@
 			<span class="add-project-header">Добавление проекта</span>
 			<div class="add-project-wrap">
 				<i class="close-btn b-close"></i>
-				<form class="add-project-form">
+				<form role="form" class="add-project-form form" id="add-project-form">
+					<div class="server-mes error-mes"></div>
+					<div class="server-mes success-mes"></div>
 					<label for="name-project" class="project-label">Название проекта</label>
-					<input type="text" id="name-project" class="input-item" placeholder="Введите название">
+					<input type="text" id="name-project" name="name-project" class="input-item" placeholder="Введите название">
 					<label for="add-file" class="project-label">Картинка проекта</label>
 					<div id="image-project" class="input-item" >Загрузите изображение</div><div class="add-file-img"><i class="add-file-image-cloud"><input type="file" id="add-file" class="add-file"></i></div>
 					<label for="url-project" class="project-label">URL проекта</label>
-					<input type="text" id="url-project" class="input-item" placeholder="Добавьте ссылку">
+					<input type="text" id="url-project" name="url-project" class="input-item" placeholder="Добавьте ссылку">
 					<label for="description-project" class="project-label">Описание проекта</label>
-					<textarea name="" id="description-project" class="input-item textarea-item" placeholder="Пара слов в Вашем проекте"></textarea>
+					<textarea name="description-project" id="description-project" class="input-item textarea-item" placeholder="Пара слов в Вашем проекте"></textarea>
 					<div class="btn-wrap"><button type="submit" class="input-button input-button-submit">Добавить</button></div>
 				</form>
 			</div>
@@ -226,6 +228,7 @@
 	<script src="js/popup.js"></script>
 	<script src="js/placeholder.js"></script>
 	<script src="js/input-file.js"></script>
+	<script src="js/validation.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
