--- a/app/projects.html
+++ b/app/projects.html
@@ -187,21 +187,18 @@
 			<span class="add-project-header">Добавление проекта</span>
 			<div class="add-project-wrap">
 				<i class="close-btn b-close"></i>
-<<<<<<< HEAD
 				<form role="form" class="add-project-form form" id="add-project-form">
 					<div class="server-mes error-mes"></div>
 					<div class="server-mes success-mes"></div>
-=======
-				<form class="add-project-form" id="add-project-form">
->>>>>>> 2bad3c825dc9c40f3d6fbd7cbaeeaee5746984b6
-					<label for="name-project" class="project-label">Название проекта</label>
-					<input type="text" id="name-project" name="name-project" class="input-item" placeholder="Введите название">
+
+					<label for="name-project" class="project-label" >Название проекта</label>
+					<input type="text" id="name-project" name="name-project" class="input-item" placeholder="Введите название" qtip-content="введите название">
 					<label for="add-file" class="project-label">Картинка проекта</label>
-					<div id="image-project" class="input-item" >Загрузите изображение</div><div class="add-file-img"><i class="add-file-image-cloud"><input type="file" id="add-file" class="add-file"></i></div>
-					<label for="url-project" class="project-label">URL проекта</label>
-					<input type="text" id="url-project" name="url-project" class="input-item" placeholder="Добавьте ссылку">
+					<div id="image-project" class="input-item" qtip-content="изображение">Загрузите изображение</div><div class="add-file-img"><i class="add-file-image-cloud"><input type="file" id="add-file" class="add-file"></i></div>
+					<label for="url-project" class="project-label" >URL проекта</label>
+					<input type="text" id="url-project" name="url-project" class="input-item" placeholder="Добавьте ссылку" qtip-content="ссылка на проект">
 					<label for="description-project" class="project-label">Описание проекта</label>
-					<textarea name="description-project" id="description-project" class="input-item textarea-item" placeholder="Пара слов в Вашем проекте"></textarea>
+					<textarea name="description-project" id="description-project" class="input-item textarea-item" placeholder="описание проекта"></textarea>
 					<div class="btn-wrap"><button type="submit" class="input-button input-button-submit">Добавить</button></div>
 				</form>
 			</div>
