--- a/app/callback.html
+++ b/app/callback.html
@@ -78,7 +78,7 @@
 						<h2 class="section-title">У вас интересный проект? Напишите мне</h2>
 						<div class="description">
 							<div class="callback">
-								<form action="#" name="callback" class="callback-form" id="callback">
+								<form action="#" name="callback" class="callback-form form" id="callback" role="form">
 									<div class="callback-input callback-input-margin">
 										<label for="name">Имя</label>
 										<input class="callback-item" type="text" name="name" id="name" placeholder="Как к Вам обращаться" qtip-content="Вы не ввели имя">
@@ -133,11 +133,15 @@
 	<!-- endbower -->
 	<!-- endbuild -->
 	<!-- build:css js/main.js -->
-	<script src="js/popup.js"></script>
+	
 	<script src="js/placeholder.js"></script>
 	<script src="js/input-file.js"></script>
+	<script src="js/main.js"></script>
+	<!--
+	<script src="js/popup.js"></script>
 	<script src="js/validation.js"></script>
 	<script src="js/contactMe.js"></script>
+	-->
 	<!-- endbuild -->
 </body>
 </html>
