validation input type='file'

--- a/app/projects.html
+++ b/app/projects.html
@@ -194,7 +194,7 @@
 					<label for="name-project" class="project-label" >Название проекта</label>
 					<input type="text" id="name-project" name="name-project" class="input-item" placeholder="Введите название" qtip-content="введите название">
 					<label for="add-file" class="project-label">Картинка проекта</label>
-					<div id="image-project" class="input-item" qtip-content="изображение">Загрузите изображение</div><div class="add-file-img"><i class="add-file-image-cloud"><input type="file" id="add-file" class="add-file"></i></div>
+					<div id="image-project" class="input-item" qtip-content="изображение">Загрузите изображение</div><div class="add-file-img"><i class="add-file-image-cloud"><input type="file" id="add-file" class="add-file" qtip-content="изображение"></i></div>
 					<label for="url-project" class="project-label" >URL проекта</label>
 					<input type="text" id="url-project" name="url-project" class="input-item" placeholder="Добавьте ссылку" qtip-content="ссылка на проект">
 					<label for="description-project" class="project-label">Описание проекта</label>
