--- a/app/projects.html
+++ b/app/projects.html
@@ -193,8 +193,10 @@
 
 					<label for="name-project" class="project-label" >Название проекта</label>
 					<input type="text" id="name-project" name="name-project" class="input-item" placeholder="Введите название" qtip-content="введите название">
-					<label for="add-file" class="project-label">Картинка проекта</label>
-					<div id="image-project" class="input-item" qtip-content="изображение">Загрузите изображение</div><div class="add-file-img"><i class="add-file-image-cloud"><input type="file" id="add-file" class="add-file" qtip-content="изображение"></i></div>
+					<label for="add-file" class="project-label">Картинка проекта
+						<div id="image-project" class="input-item" qtip-content="изображение"><div class="input-item input-item-name" id="image-project-name">Загрузите изображение</div><input type="file" id="add-file" class="add-file" qtip-content="изображение"><div class="add-file-img"><i class="add-file-image-cloud"></i></div></div>
+						
+					</label>
 					<label for="url-project" class="project-label" >URL проекта</label>
 					<input type="text" id="url-project" name="url-project" class="input-item" placeholder="Добавьте ссылку" qtip-content="ссылка на проект">
 					<label for="description-project" class="project-label">Описание проекта</label>
